fix clear:both layout issue with floating element

--- a/css/files.css
+++ b/css/files.css
@@ -233,3 +233,7 @@
 .files .header+.headerLongerLine {
     width: 90%;
 }
+
+.files > .wrapper > div {
+    clear: none;
+}
